# minlz-rs

./: .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  MISSING_FEATURES.md  README.md  TEST_IMPLEMENTATION_PROGRESS.md  test_maxlen.go
.github/workflows/: ci.yml  fuzz.yml  quick-check.yml  release-binaries.yml  release-plz.yml  release.yml
benches/: compression.rs
examples/: basic.rs  compare_best.rs  compression_levels.rs  debug.rs  debug_better.rs  debug_snappy.rs  decode_instructions.rs  file_compression.rs  interop.rs  stream.rs  verify_crc_formula.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs  fuzz_stream.rs
minlz-tools/: Cargo.toml  README.md
minlz-tools/src/: lib.rs
minlz-tools/tests/: mz_cli.rs
s2-tools/: Cargo.toml
src/: concurrent.rs  constants.rs  crc.rs  decode.rs  dict.rs  encode.rs  error.rs  index.rs  lib.rs  reader.rs  snappy_tests.rs  tests.rs  varint.rs  writer.rs
src/minlz/: index.rs  mod.rs
src/minlz/block/: decode.rs  encode.rs  encode_asm.rs  encode_block_amd64.s  mod.rs  tests.rs
src/minlz/stream/: mod.rs  reader.rs  tests.rs  writer.rs
tests/: best_compatibility.rs  better_compatibility.rs  comprehensive.rs  go_compatibility.rs  minlz_compat.rs  mz_cli.rs  proptest.proptest-regressions  proptest.rs  snappy_compat.rs
tools/asm/: README.md  translate.py
