[package]
name = "minlz"
version = "1.2.0"
edition = "2021"
rust-version = "1.81"
authors = ["Karpeles Lab Inc."]
description = "S2 compression format - compatible with klauspost/compress/s2"
license = "BSD-3-Clause"
repository = "https://github.com/KarpelesLab/minlz-rs"

[lib]
name = "minlz"
path = "src/lib.rs"

[dependencies]
crc = "3.3.0"
rayon = { version = "1.8", optional = true }

[features]
default = ["std", "s2", "minlz"]
# Enables the streaming API (`Reader`, `Writer`, `ConcurrentWriter`) and the
# `std::io` integration. Disable (`--no-default-features`) for a `no_std` +
# `alloc` build exposing the block APIs.
std = []
# The S2 codec (Snappy-compatible). Exposed at the crate root (`encode`/`decode`/
# `Reader`/`Writer`/…) and under the `s2` module. This is the original codec.
s2 = []
# The MinLZ codec (github.com/minio/minlz, MinLZ spec v1.0). Exposed under the
# `minlz` module.
minlz = []
concurrent = ["std", "s2", "rayon"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "compression"
harness = false
